--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">GoogleMaps</string>
     <string name="default_web_client_id">106098775545-e4fupn75vjetphom5stdjj135tkig25p.apps.googleusercontent.com</string>
+    <string name="ok">ok</string>
+    <string name="channelName">channelName</string>
+    <string name="channelDescription">channelDescription</string>
 </resources>
